fixing body alignment

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -26,9 +26,8 @@ body{
   font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
-  display:flex;
-  justify-content:center;
 }
+
 
 /* container to center content and limit width */
 .container{
